<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="uygulama_adi">Akor Defterim</string>
    <string name="uygulama_yapimci_adi">cbcapp.net</string>
    <string name="uygulama_yapimci_webadres">cbcapp.net</string>
    <string name="uygulama_yapimci_site">http://www.cnbcyln.com</string>
    <string name="uygulama_yapimci_eposta">info@cnbcyln.com</string>
    <string name="uygulama_copyright">%s - Copyright © 2016</string>
    <string name="uygulama_telif_hakki_yazisi">Tüm hakları saklıdır..</string>
    <string name="yenilikler_icerik" tools:ignore="Typos">
        Yeni neler yaptık?&lt;br&gt;&lt;br&gt;
        &lt;b&gt;(Yeni Sürüm %s)&lt;/b&gt;&lt;br&gt;* Artık uygulama üzerinden video bağlantı link\'i belirlenmiş olan şarkıların kliplerini izleyebileceksiniz. Dilerseniz kendi repertuvarınıza şarkı eklerken Youtube vs. gibi sitelerden bağlantı linki ekleyerek içeriğinizi zenginleştirebilirsiniz.&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.6.5)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.6.4)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.6.3)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.6.2)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.6.1)&lt;/b&gt;&lt;br&gt;* Haberleşme alt yapı ağı geliştirildi.&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.6.0)&lt;/b&gt;&lt;br&gt;* Güncelleme kontrol hatası giderildi.&lt;br&gt;* Kendi sıralamanızı yapabileceğiniz Listeleme Tipi seçeneği eklendi. Artık Şarkı Yönetimi ekranında Filtre Listeleme Tipini değiştirerek ve liste üzerine basılı tutarak kendi sıralamanızı yapabileceksiniz.&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.9)&lt;/b&gt;&lt;br&gt;* Güncelleme kontrol hatası giderildi.&lt;br&gt;* Kendi sıralamanızı yapabileceğiniz Listeleme Tipi seçeneği eklendi. Artık Şarkı Yönetimi ekranında Filtre Listeleme Tipini değiştirerek ve liste üzerine basılı tutarak kendi sıralamanızı yapabileceksiniz.&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.8)&lt;/b&gt;&lt;br&gt;* Ekran süre aşımı hatası düzeltildi.&lt;br&gt;* Şarkı ekleme ekranındaki İ harfi hatası giderildi.&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.7)&lt;/b&gt;&lt;br&gt;* Akor cetveli yenilendi.&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.6)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.5)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.4)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Kayıt olma ve profil güncelleme politikasında düzenlemeler yapıldı.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.3)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.2)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.1)&lt;/b&gt;&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.5.0)&lt;/b&gt;&lt;br&gt;* Tasarım tamamıyla değişti.&lt;br&gt;* Tüm yazılımsal alt yapı geliştirildi.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.4.9)&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.4.8)&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.&lt;br&gt;&lt;br&gt;
        (Eski Sürüm 1.4.7)&lt;br&gt;* Genel yazılımsal hatalar giderildi.&lt;br&gt;* Görsel düzenlemeler yapıldı.</string>
    <string name="bosluk"> </string>
    <string name="labeltire">---</string>
    <string name="imageDesc">ImageDesc</string>
    <string name="kabul_et">Kabul et</string>
    <string name="reddet">Reddet</string>
    <string name="ara">Ara</string>
    <string name="sanatci_adi">Sanatçı adı</string>
    <string name="sanatci_adi_yildiz">Sanatçı adı *</string>
    <string name="sarki_adi">Şarkı adı</string>
    <string name="sarki_adi_yildiz">Şarkı adı *</string>
    <string name="video_url">Video URL</string>
    <string name="video_url_opsiyonel">Video URL (Opsiyonel)</string>
    <string name="sarki_sanatci_adi">Sanatçı ya da şarkı adı</string>
    <string name="yeniden_dene">Yeniden dene</string>
    <string name="yeniden_gonder">Yeniden gönder</string>
    <string name="cevrimici">Çevrimiçi</string>
    <string name="cevrimdisi">Çevrimdışı</string>
    <string name="kaydet">Kaydet</string>
    <string name="sifirla">Sıfırla</string>
    <string name="hata">Hata</string>
    <string name="ayarla">Ayarla</string>
    <string name="iptal">İptal</string>
    <string name="tumu">Tümü</string>
    <string name="tumunu_sec">Tümünü Seç</string>
    <string name="tumunu_sec_circle_checkbox_bos">{cmd_checkbox_blank_circle_outline} Tümünü Seç</string>
    <string name="tumunu_sec_circle_checkbox_dolu">{cmd_check_circle_outline} Tümünü Seç</string>
    <string name="tumunu_sec_circle_checkbox_yaridolu">{cmd_checkbox_blank_circle} Tümünü Seç</string>
    <string name="ozellikler">Özellikler</string>
    <string name="checkin_yap">Check-in yap</string>
    <string name="listeme_ekle">Listeme ekle</string>
    <string name="listemden_sil">Listemden sil</string>
    <string name="yok">Yok</string>
    <string name="uygula">Uygula</string>
    <string name="uygulamadan_cik">Uygulamadan çık</string>
    <string name="guncelle">Güncelle</string>
    <string name="cevrimdisi_devam_et">Çevrimdışı devam et</string>
    <string name="cevrimdisi_giris_yap">Çevrimdışı Giriş Yap</string>
    <string name="akoru">Akoru</string>
    <string name="ileri">İleri</string>
    <string name="gec">Geç</string>
    <string name="basla">Başla</string>
    <string name="paylas">Paylaş</string>
    <string name="video_klip">Video Klip</string>
    <string name="dusuk">Düşük</string>
    <string name="orta">Orta</string>
    <string name="yuksek">Yüksek</string>
    <string name="fotografi_degistir">Fotoğrafı Değiştir</string>
    <string name="bir_profil_fotografi_belirle">Bir Profil Fotoğrafı Belirle</string>
    <string name="toplam">Toplam</string>
    <string name="fred">Perde</string>
    <string name="aciklamalar">Açıklamalar</string>
    <string name="sms_dogrulama_kodu_icerik">Merhaba. Doğrulama kodunuz: %1$s / %2$s</string>
    <string name="telefon_numarasi_degistir">Telefon Numarası Değiştir</string>
    <string name="sms_gonderildi">SMS Gönderildi</string>
    <string name="sms_parola_gonderildi_icerik">Merhaba %1$s. İsteğin üzerine hesabına ait parolanı gönderdik. Parola: %2$s / %3$s</string>
    <string name="sms_parola_gonderildi_mesaj">&lt;b&gt;%s&lt;/b&gt; cep telefonuna, hesabına ait parolayı içeren sms gönderdik.</string>
    <string name="sms_dogrulama_kodu_gonderildi_mesaj">&lt;b&gt;%s&lt;/b&gt; cep telefonuna, doğrulama kodu içeren sms gönderdik.</string>
    <string name="sms_gonderilemedi_mesaj">&lt;b&gt;%s&lt;/b&gt; cep telefonuna sms gönderilemedi. Daha sonra yeniden deneyin.</string>
    <string name="sms_gonderilemedi">SMS Gönderilemedi</string>
    <string name="eposta_yeni_hesap">Yeni Hesap</string>
    <string name="eposta_yeni_hesap_icerik">Merhaba %1$s %2$s. %3$s uygulamasına hoşgeldiniz. Doğrulama kodunu android uygulamasındaki onay kodu alanına yazarak üyeliğinizi tamamlayınız. Doğrulama Kodu: %4$s</string>
    <string name="eposta_degistir">E-posta Değiştir</string>
    <string name="eposta_onayi">Email Doğrulama</string>
    <string name="eposta_dogrulama_kodu_icerik">Merhaba. Doğrulama kodunuz: %1$s &lt;br&gt;&lt;br&gt;&lt;b&gt;%2$s Ekibi&lt;/b&gt;</string>
    <string name="eposta_dogrulama_kodu_gonderildi_mesaj">&lt;b&gt;%s&lt;/b&gt; adresine, doğrulama kodu içeren e-posta gönderdik.</string>
    <string name="eposta_sifremiunuttum">Sifremi Unuttum</string>
    <string name="eposta_sifremiunuttum_icerik">Merhaba %1$s. Sifrenizi sıfırlamak için kullanacağınız doğrulama kodunuz: %2$s</string>
    <string name="eposta_gonderildi">E-posta Gönderildi</string>
    <string name="eposta_parola_gonderildi_icerik">Merhaba &lt;b&gt;%1$s&lt;/b&gt;,&lt;br&gt;&lt;br&gt;İsteğin üzerine hesabına ait parolanı gönderdik.&lt;br&gt;&lt;b&gt;Parola:&lt;/b&gt; %2$s &lt;br&gt;&lt;br&gt;&lt;b&gt;%3$s Ekibi&lt;/b&gt;</string>
    <string name="eposta_parola_gonderildi_mesaj">&lt;b&gt;%s&lt;/b&gt; adresine, hesabına ait parolayı içeren e-posta gönderdik.</string>
    <string name="eposta_gonderilemedi">E-posta Gönderilmedi</string>
    <string name="eposta_gonderilemedi_mesaj">&lt;b&gt;%s&lt;/b&gt; adresine e-posta gönderilemedi. Daha sonra yeniden deneyin.</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="hesabim">Hesabım</string>
    <string name="istatistik">İstatistik</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="secenekler">Seçenekler</string>
    <string name="hakkinda">Hakkında</string>
    <string name="kapat">Kapat</string>
    <string name="cikis">Çıkış</string>
    <string name="tabsayfa_genel_menu">Genel Menü</string>
    <string name="tabsayfa_repertuvar_kontrol">Repertuvar Kontrol</string>
    <string name="tabsayfa_istekler">İstekler</string>
    <string name="parolami_unuttum_bilgi">Email adresini ya da kullanıcı adını gir</string>
    <string name="sifre_degistirme_bilgi">Güncel şifrenizi yazdıktan sonra lütfen yeni şifrenizi belirleyin.</string>
    <string name="listele">Listele</string>
    <string name="vazgec">Vazgeç</string>
    <string name="tamamla">Tamamla</string>
    <string name="listelemetipi">Listeleme Tipi</string>
    <string name="liste_bos">Liste Boş</string>
    <string name="kullanici_adini_belirle">Kullanıcı adını belirle</string>
    <string name="kullaniciadi_ekran_belirle">En az &lt;b&gt;%1$s&lt;/b&gt; karakter, en fazla &lt;b&gt;%2$s&lt;/b&gt; karakter, boşluk bırakmadan, Türkçe harf &lt;b&gt;(ı,ğ,ü,ş,ö,ç)&lt;/b&gt; kullanmadan bir kullanıdı adı belirlemelisin.</string>
    <string name="hizmet_kosullari_aciklama" tools:ignore="Typos">Kayıt olduğunda &lt;b&gt;%1$s&lt;/b&gt; &lt;b&gt;%2$s&lt;/b&gt; ve &lt;b&gt;%3$s&lt;/b&gt;\'nı kabul etmiş olursun.</string>
    <string name="filtre">Filtre</string>
    <string name="kullaniciadi">Kullanıcı adı</string>
    <string name="guncel_sifre">Güncel şifre</string>
    <string name="yeni_sifre">Yeni şifre</string>
    <string name="yeni_sifre_tekrar">Yeni şifre (Tekrar)</string>
    <string name="liste">Liste</string>
    <string name="listeler">Liste(ler)</string>
    <string name="kategori">Kategori</string>
    <string name="kategoriler">Kategori(ler)</string>
    <string name="tarz">Tarz</string>
    <string name="tarzlar">Tarz(lar)</string>
    <string name="sarki_yonetimi">Şarkı Yönetimi</string>
    <string name="egitim_3_baslik">Anasayfa (Son Eklenen Şarkılar)</string>
    <string name="egitim_3_icerik" tools:ignore="Typos">Bu ekranda son eklenen şarkıları ve detaylarını görebilirsiniz.&lt;br&gt;&lt;br&gt;&lt;b&gt;Not: Yukarıdan aşağı kaydırdığınızda liste yenilenir.&lt;/b&gt;</string>
</resources>