<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/coordinatorLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
	android:keepScreenOn="true"
	android:background="@color/Beyaz">

	<RelativeLayout
		android:id="@+id/RelativeLayout1"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RelativeLayout
			android:id="@+id/RLSarkiYonetimi_BosPanel"
			android:layout_width="match_parent"
			android:layout_height="?android:attr/actionBarSize"
			android:background="@color/Beyaz">

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/RLSarkiYonetimi_AnaPanel"
			android:layout_width="match_parent"
			android:layout_height="?android:attr/actionBarSize"
			android:background="@color/Beyaz">

			<ImageButton
				android:id="@+id/btnGeri_AnaPanel"
				android:layout_width="60dp"
				android:layout_height="match_parent"
				android:layout_centerVertical="true"
				android:background="@drawable/custom_button2"
				app:srcCompat="@drawable/ic_arrow_back_siyah"
				android:contentDescription="@string/imageDesc" />

			<TextView
				android:id="@+id/lblBaslik_AnaPanel"
				style="@style/TextAppearance.AppCompat.Medium.Inverse"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_centerVertical="true"
				android:layout_toEndOf="@+id/btnGeri_AnaPanel"
				android:layout_toRightOf="@+id/btnGeri_AnaPanel"
				android:text="@string/sarki_yonetimi"
				android:textColor="@color/KoyuYazi"
				tools:ignore="RelativeOverlap" />

			<ImageButton
				android:id="@+id/btnFiltre_AnaPanel"
				android:layout_width="60dp"
				android:layout_height="match_parent"
				android:layout_toLeftOf="@+id/btnAra_AnaPanel"
				android:layout_toStartOf="@+id/btnAra_AnaPanel"
				android:background="@drawable/custom_button2"
				android:contentDescription="@string/imageDesc"
				app:srcCompat="@drawable/ic_filter_siyah" />

			<ImageButton
				android:id="@+id/btnAra_AnaPanel"
				android:layout_width="60dp"
				android:layout_height="match_parent"
				android:layout_alignParentRight="true"
				android:background="@drawable/custom_button2"
				android:contentDescription="@string/imageDesc"
				app:srcCompat="@drawable/ic_ara_siyah" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/RLSarkiYonetimi_AramaPanel"
			android:layout_width="match_parent"
			android:layout_height="?android:attr/actionBarSize"
			android:background="@color/Beyaz"
			android:visibility="gone">

			<ImageButton
				android:id="@+id/btnGeri_AramaPanel"
				android:layout_width="60dp"
				android:layout_height="match_parent"
				android:layout_alignParentLeft="true"
				android:background="@drawable/custom_button2"
				android:contentDescription="@string/imageDesc"
				app:srcCompat="@drawable/ic_arrow_back_siyah" />

			<com.cnbcyln.app.akordefterim.util.ClearableEditText
				android:id="@+id/txtAra_AramaPanel"
				style="@style/TextAppearance.AppCompat.Small.Inverse"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_toEndOf="@+id/btnGeri_AramaPanel"
				android:layout_toRightOf="@+id/btnGeri_AramaPanel"
				android:hint="@string/sarki_sanatci_adi"
				android:inputType="text"
				android:textColor="@color/KoyuYazi"
				android:textColorHint="@color/KoyuGri2" />
		</RelativeLayout>

		<View
			android:id="@+id/view1"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@+id/RLSarkiYonetimi_BosPanel"
			android:background="@drawable/cizgi_ortagri" />

		<RelativeLayout
			android:id="@+id/RLContent"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/view1"
			android:background="@color/Beyaz">

			<com.cnbcyln.app.akordefterim.FastScrollListview.FastScroller_Listview
				android:id="@+id/lstSarkiYonetimi"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/Beyaz"
				android:choiceMode="multipleChoice" />

			<TextView
				android:id="@+id/lblOrtaMesaj"
				style="@style/TextAppearance.AppCompat.Medium.Inverse"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"
				android:text="@string/liste_bos"
				android:textColor="@color/KoyuYazi" />

			<com.github.clans.fab.FloatingActionButton
				android:id="@+id/FABSarkiEkle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dp"
				android:layout_marginBottom="10dp"
				android:layout_alignParentBottom="true"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true" />
		</RelativeLayout>

		<LinearLayout
			android:id="@+id/LLFiltreMenu"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/RLSarkiYonetimi_BosPanel"
			android:background="@color/KoyuMavi2"
			android:padding="20dp"
			android:elevation="6dp"
			android:orientation="vertical"
			tools:targetApi="lollipop">

			<TextView
				android:id="@+id/lblFiltre"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/filtre"
				android:textColor="@color/Beyaz"
				style="@style/TextAppearance.AppCompat.Medium.Inverse" />

			<View
				android:id="@+id/view2"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@drawable/cizgi_ortagri" />

			<TextView
				android:id="@+id/lblListeler"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/listeler"
				android:textColor="@color/Beyaz"
				style="@style/TextAppearance.AppCompat.Small.Inverse" />

			<Spinner
				android:id="@+id/spnListeler"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:background="@drawable/custom_spinner" />

			<TextView
				android:id="@+id/lblKategoriler"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/kategoriler"
				android:textColor="@color/Beyaz"
				style="@style/TextAppearance.AppCompat.Small.Inverse" />

			<Spinner
				android:id="@+id/spnKategoriler"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:background="@drawable/custom_spinner" />

			<TextView
				android:id="@+id/lblTarzlar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/tarzlar"
				android:textColor="@color/Beyaz"
				style="@style/TextAppearance.AppCompat.Small.Inverse" />

			<Spinner
				android:id="@+id/spnTarzlar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:background="@drawable/custom_spinner" />

			<TextView
				android:id="@+id/lblListelemeTipi"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/listelemetipi"
				android:textColor="@color/Beyaz"
				style="@style/TextAppearance.AppCompat.Small.Inverse" />

			<Spinner
				android:id="@+id/spnListelemeTipi"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:background="@drawable/custom_spinner" />

			<Button
				android:id="@+id/btnListele"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_gravity="end"
				android:layout_marginTop="16dp"
				android:background="@drawable/custom_button_gri"
				android:text="@string/listele"
				android:textAppearance="@style/TextAppearance.AppCompat"
				android:textColor="@color/KoyuYazi"
				style="@style/TextAppearance.AppCompat.Small.Inverse" />

		</LinearLayout>
	</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>