<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:background="@color/bg_screen1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:background="@color/Gri">

        <ImageView
            android:id="@+id/ImgEgitimResim2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:contentDescription="@string/imageDesc"
            android:src="@drawable/egitim_resim2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="60">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblegitim_3_baslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/egitim_3_baslik"
                android:textSize="@dimen/yazi_boyutu16"
                android:textColor="@color/TuruncuYazi"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblegitim_3_icerik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/egitim_3_icerik"
                android:textColor="@color/Beyaz"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>