<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/coordinatorLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/Beyaz">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		android:keepScreenOn="true">

		<android.support.constraint.Guideline
			android:id="@+id/v_guideline1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.05" />

		<android.support.constraint.Guideline
			android:id="@+id/v_guideline2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.95" />

		<android.support.constraint.Guideline
			android:id="@+id/h_guideline1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.085" />

		<ImageButton
			android:id="@+id/btnGeri"
			android:layout_width="60dp"
			android:layout_height="0dp"
			android:background="@drawable/custom_button2"
			app:layout_constraintBottom_toTopOf="@+id/view1"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_arrow_back_siyah"
			android:contentDescription="@string/imageDesc" />

		<TextView
			android:id="@+id/lblBaslik"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="12dp"
			android:layout_marginLeft="12dp"
			android:text="@string/kullanici_adini_belirle"
			android:textColor="@color/KoyuYazi"
			style="@style/TextAppearance.AppCompat.Medium.Inverse"
			app:layout_constraintBottom_toTopOf="@+id/view1"
			app:layout_constraintStart_toEndOf="@+id/btnGeri"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/lblVazgec"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginRight="16dp"
			android:text="@string/vazgec"
			android:textAppearance="@style/TextAppearance.AppCompat.Button"
			android:textColor="@color/AcikMavi3"
			style="@style/TextAppearance.AppCompat.Small.Inverse"
			app:layout_constraintBottom_toTopOf="@+id/h_guideline1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<View
			android:id="@+id/view1"
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:background="@drawable/cizgi_ortagri"
			app:layout_constraintTop_toTopOf="@+id/h_guideline1" />

        <TextView
            android:id="@+id/lblKullaniciAdiAciklama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/kullaniciadi_ekran_belirle"
            android:textColor="@color/KoyuGri"
			style="@style/TextAppearance.AppCompat.Small.Inverse"
            app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
            app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

		<ImageView
			android:id="@+id/ImgEmail"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginBottom="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:contentDescription="@string/imageDesc"
			app:layout_constraintBottom_toBottomOf="@+id/txtILKullaniciAdi"
			app:layout_constraintStart_toStartOf="@+id/v_guideline1"
			app:srcCompat="@drawable/ic_user" />

		<android.support.design.widget.TextInputLayout
			android:id="@+id/txtILKullaniciAdi"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="16dp"
			android:textColorHint="@color/KoyuGri"
			app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
			app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
			app:layout_constraintStart_toEndOf="@+id/ImgEmail"
			app:layout_constraintTop_toBottomOf="@+id/lblKullaniciAdiAciklama">

			<EditText
				android:id="@+id/txtKullaniciAdi"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:hint="@string/kullaniciadi"
				android:textColor="@color/KoyuYazi"
				style="@style/TextAppearance.AppCompat.Small.Inverse"/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:id="@+id/lblKullanimKosullariAciklama"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/hizmet_kosullari_aciklama"
			android:textColor="@color/KoyuGri"
			style="@style/TextAppearance.AppCompat.Small.Inverse"
			app:layout_constraintLeft_toLeftOf="@+id/v_guideline1"
			app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
			app:layout_constraintTop_toBottomOf="@+id/txtILKullaniciAdi" />

		<Button
			android:id="@+id/btnTamamla"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:background="@drawable/custom_button_yesil"
			android:drawableEnd="@drawable/ic_check_beyaz"
			android:drawableRight="@drawable/ic_check_beyaz"
			android:layout_marginRight="0dp"
			android:layout_marginEnd="0dp"
			android:layout_marginTop="16dp"
			android:paddingRight="5dp"
			android:paddingEnd="5dp"
			android:paddingStart="15dp"
			android:paddingLeft="15dp"
			android:text="@string/tamamla"
			android:textAppearance="@style/TextAppearance.AppCompat"
			android:textColor="@color/Beyaz"
			style="@style/TextAppearance.AppCompat.Small.Inverse"
			app:layout_constraintRight_toLeftOf="@+id/v_guideline2"
            app:layout_constraintTop_toBottomOf="@+id/lblKullanimKosullariAciklama" />

	</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>